--- a/src/app/core/layout/header/header.component.html
+++ b/src/app/core/layout/header/header.component.html
@@ -1,1 +1,74 @@
-<p>header works!</p>
+<header id="header" class="sticky-top d-flex flex-column">
+  <div class="header-top">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-12 col-md">
+          <a class="navbar-brand" href="#"><img src="assets/images/Logo.svg"/> </a>
+        </div>
+        <div class="col-12 col-md-6">       
+        </div>
+        <div class="col-12 col-md">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0 flex-row">
+            <li class="nav-item  d-flex align-items-center px-2 ">
+              <span><img src="assets/images/bookmark.svg"/></span><a class="nav-link px-2" href="#">Wishlist</a>
+            </li>
+            <li class="nav-item  d-flex align-items-center px-2 ">
+              <span><img src="assets/images/shopping-cart-02.svg"/></span><a class="nav-link px-2"  id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Cart</a>
+              <div class="dropdown-menu p-2 " aria-labelledby="dropdownMenuButton">               
+
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+  <nav class="navbar navbar-expand-lg header-bottom py-0">
+    <div class="container">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">          
+          <li class="nav-item">
+            <a class="nav-link" href="#">Electronics</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Mobile</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Men</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Women</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Beauty & Health</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Baby & Toys</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">SuperMarket</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Sell On Platform</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">New Deals</a>
+          </li>
+
+        </ul>
+      </div>
+    </div>
+
+    </nav>
+
+
+
+</header>
+
+
+
+
