--- a/src/app/shared/component/categories-list/categories-list.component.html
+++ b/src/app/shared/component/categories-list/categories-list.component.html
@@ -1,1 +1,5 @@
-<p>categories-list works!</p>
+<ul>
+  <ng-container *ngFor="let category of Categories">
+    <li>{{category}}</li>
+  </ng-container>
+</ul>
