Add Brands List

--- a/src/app/core/layout/sidebar/sidebar.component.html
+++ b/src/app/core/layout/sidebar/sidebar.component.html
@@ -1,1 +1,8 @@
-<app-categories-list></app-categories-list>
+<div id="sidebar">
+  <h4>Categories</h4>
+  <app-categories-list></app-categories-list>
+  <div class="pt-3">
+    <h4>Brands</h4>
+    <app-brands-list></app-brands-list>
+  </div>
+</div>
